1688Admin : add estate pages

--- a/src/apps/1688Admin/components/system-list/index.pug
+++ b/src/apps/1688Admin/components/system-list/index.pug
@@ -40,7 +40,7 @@
                 i.fa.fa-desktop
             .sl-btn-title 信息化平台
     .col-xs-4
-        a.sl-btn.touch-active(href='#')
+        a.sl-btn.touch-active(href='index-estate.html#estate.html' target="_blank")
             .sl-btn-icon
                 i.fa.fa-building-o
             .sl-btn-title 物业管理
