1688Web : add resource pages

--- a/src/apps/1688Admin/components/system-list/index.pug
+++ b/src/apps/1688Admin/components/system-list/index.pug
@@ -20,7 +20,7 @@
                 i.fa.fa-print
             .sl-btn-title 协同办公
     .col-xs-4
-        a.sl-btn.touch-active(href='#')
+        a.sl-btn.touch-active(href='index-resource.html#resource.html' target="_blank")
             .sl-btn-icon
                 i.fa.fa-database
             .sl-btn-title 资源服务
