1688Admin : add party and platform pages

--- a/src/apps/1688Admin/components/system-list/index.pug
+++ b/src/apps/1688Admin/components/system-list/index.pug
@@ -25,7 +25,7 @@
                 i.fa.fa-database
             .sl-btn-title 资源服务
     .col-xs-4
-        a.sl-btn.touch-active(href='#')
+        a.sl-btn.touch-active(href='index-party.html#party.html' target="_blank")
             .sl-btn-icon
                 i.fa.fa-star-o
             .sl-btn-title 党政管理
@@ -35,7 +35,7 @@
                 i.fa.fa-cogs
             .sl-btn-title 系统管理
     .col-xs-4
-        a.sl-btn.touch-active(href='#')
+        a.sl-btn.touch-active(href='index-platform.html#platform.html' target="_blank")
             .sl-btn-icon
                 i.fa.fa-desktop
             .sl-btn-title 信息化平台
