1688Web : edit nav content

--- a/src/apps/1688Web/components/sidebar/index.pug
+++ b/src/apps/1688Web/components/sidebar/index.pug
@@ -18,6 +18,6 @@
     a.sidebar-btn.sbbtn-5(href="javascript:;") 
         i.fa.fa-commenting
         |&nbsp;企业诉求
-    a.sidebar-btn.sbbtn-6#btn_totop(href="javascript:;") 
+    .sidebar-btn.sbbtn-6#btn_totop
         i.fa.fa-arrow-up
         |&nbsp;返回顶端
