--- a/src/apps/1688Web/components/sidebar/index.styl
+++ b/src/apps/1688Web/components/sidebar/index.styl
@@ -60,6 +60,7 @@ SB_HEIGHT_2 = SB_LOGO_HEIGHT + SB_TITLE_HEIGHT + 6*SB_BTN_HEIGHT
         text-align center
         line-height SB_BTN_HEIGHT
         color WHITE
+        cursor pointer
         &.sbbtn-1
             background-color BGC_BTN_1
             &:hover
