--- a/src/apps/1688Web/components/topbar/index.pug
+++ b/src/apps/1688Web/components/topbar/index.pug
@@ -7,26 +7,17 @@
                 .rootmenu
                     .menu-btn.sel 首页
                 .rootmenu
+                    .menu-btn 招商
+                    .submenu
+                        .submenu-btn 招商信息
+                        .submenu-btn 招商区域
+                .rootmenu
                     .menu-btn 资讯
                     .submenu
                         .submenu-btn 行业资讯
                         .submenu-btn 园区新闻
                         .submenu-btn 通知公告
                         .submenu-btn 政策法规
-                .rootmenu
-                    .menu-btn 企业
-                .rootmenu
-                    .menu-btn 招商
-                .rootmenu
-                    .menu-btn 资源
-                    .submenu
-                        .submenu-btn 融资服务
-                        .submenu-btn 财税服务
-                        .submenu-btn 人力资源
-                        .submenu-btn 管理咨询
-                        .submenu-btn 法律服务
-                        .submenu-btn 专利服务
-                        .submenu-btn 培训服务
                 .rootmenu
                     .menu-btn 创业
                     .submenu
@@ -38,13 +29,39 @@
                         .submenu-btn 创业路演
                         .submenu-btn 创业扶持
                 .rootmenu
-                    .menu-btn 用户
+                    .menu-btn 资源
+                    .submenu
+                        .submenu-btn 融资服务
+                        .submenu-btn 财税服务
+                        .submenu-btn 人力资源
+                        .submenu-btn 管理咨询
+                        .submenu-btn 法律服务
+                        .submenu-btn 专利服务
+                        .submenu-btn 培训服务
                 .rootmenu
-                    .menu-btn 我们
+                    .menu-btn 名企
+                    .submenu
+                        .submenu-btn 明星企业
+                        .submenu-btn 创业领军企业
                 .rootmenu
-                    .menu-btn 生活
+                    .menu-btn 园区
+                    .submenu
+                        .submenu-btn 园区配套
+                        .submenu-btn 园区活动
+                        .submenu-btn 园区生活
+                        .submenu-btn 企业招聘
                 .rootmenu
                     .menu-btn 党团
+                .rootmenu
+                    .menu-btn 关于
+                    .submenu
+                        .submenu-btn 园区简介
+                        .submenu-btn 组织架构
+                        .submenu-btn 大事记
+                        .submenu-btn 园区规划
+                        .submenu-btn 园区文化
+                        .submenu-btn 联系方式
+                
         .user-area
             .btn.user-area-btn.login 登录
             .btn.user-area-btn.regist 注册
