--- a/src/apps/1688Admin/webapp/stylus/index.styl
+++ b/src/apps/1688Admin/webapp/stylus/index.styl
@@ -5,6 +5,7 @@
 @require 'iscroll'
 @require 'bs-overwrite'
 @require 'section-title'
+@require 'block-title'
 
 a
     text-decoration none !important
