--- a/src/apps/1688Admin/webapp/stylus/variables.styl
+++ b/src/apps/1688Admin/webapp/stylus/variables.styl
@@ -17,6 +17,7 @@ COMMON_LINE_HEIGHT = (20 / 14)
 
 //colors
 THEME_COLOR = BLUE_OCEAN
+THEME_COLOR_2 = GREEN_GRASS
 
 //layout
 INDEX_SPACE = 0.2rem
