huiye : new index page

--- a/src/apps/huiye/components/footer/index.styl
+++ b/src/apps/huiye/components/footer/index.styl
@@ -6,7 +6,8 @@
     padding 24px 0px
     font-size 13px
     color GRAY_66
-    background-color GRAY_F5
+    background-color GRAY_F0
     border-top 1px solid GRAY_E3
     text-align center
     min-width PAGE_WIDTH
+    overflow hidden
