--- a/src/apps/huiye/components/freq-used/index.styl
+++ b/src/apps/huiye/components/freq-used/index.styl
@@ -30,3 +30,9 @@ FREQ_USED_BG_COLOR = GRAY_F5
         .freq-used-icon
         .freq-used-title
             color WHITE
+
+.box-content
+    .freq-used-box
+        background-color #fbfbfb
+        &:hover
+            background-color BLUE_OCEAN
