--- a/src/apps/huiye/components/text-list/index.styl
+++ b/src/apps/huiye/components/text-list/index.styl
@@ -136,3 +136,7 @@ LIST_PIC_HEIGHT = 55px
                     -moz-text-overflow ellipsis
                     -o-text-overflow ellipsis
                     text-overflow ellipsis
+
+.box-content
+    .text-list
+        margin-top 0
