--- a/src/apps/huiye/components/todo/index.styl
+++ b/src/apps/huiye/components/todo/index.styl
@@ -129,3 +129,12 @@ TODO_PADDING = 12px
         &:hover
             background-color GRAY_F5
 
+.box-content
+    .todo
+        li
+            background-color transparent
+            border none
+            margin-top -1px
+            border-top 1px solid GRAY_D6
+            &:hover
+                background-color WHITE
