--- a/src/apps/huiye/components/topbar/index-logined.jade
+++ b/src/apps/huiye/components/topbar/index-logined.jade
@@ -1,5 +1,8 @@
 .topbar
     a.logo(href="index.html")
+    .menu-btns
+        a.menubtn.sel(href="javascript:;") 首页
+        a.menubtn(href="javascript:;") 流程中心
     .right-shoulder
         .pull-left(style="margin-right:6px;")
             a.bttn.bttn-circle2px.appendleft.bg-blue-ocean.bg-hover-lighten.font-white.new(href="javascript:;")
