--- a/src/apps/huiye/webapp/index-fluid.jade
+++ b/src/apps/huiye/webapp/index-fluid.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
     include ../components/topbar/index-logined
-    .dp-container
+    .dp-container.fluid
         .inner-content.mtop
             .col-2of3
                 .col-content
