--- a/src/apps/huiye/webapp/stylus/index.styl
+++ b/src/apps/huiye/webapp/stylus/index.styl
@@ -37,12 +37,14 @@ html
     min-height MIN_HEIGHT
 
 .dp-container
+    min-width PAGE_WIDTH
     &.fixed-width
         width PAGE_WIDTH !important
 
 
 @require 'section-title'
 @require 'block-title'
+@require 'block-box'
 @require '../../components/slider/index'
 @require '../../components/todo/index'
 @require '../../components/topbar/index'
