--- a/src/apps/huiye/components/work-carousel/index.styl
+++ b/src/apps/huiye/components/work-carousel/index.styl
@@ -17,7 +17,7 @@
             margin-top 5px
             text-align justify
             width 100%
-            height 84px
+            height auto
             overflow hidden
             line-height 22px
             font-size 12px
